# cargo

./: .gitignore  CHANGELOG.md  Dockerfile.template  LICENSE  Makefile  README.md  pyproject.toml
cargo/: __init__.py  _container.py  _types.py  containers.py  dependency_specs.py  exceptions.py  middlewares.py  types.py
examples/: circular_dependency.py  dependency_not_found.py  factory_and_value.py  hello_dependencies.py  intro.py  my_container.py
scripts/: publish.py  update_version_in_pyproject.py
tests/: test_base_cases.py  test_examples.py  test_exceptions.py  test_recursive.py
