[tool.poetry]
authors = ["Mathieu Larose <mathieu@mathieularose.com>"]
description = "Dependency injection library for Python."
homepage = "https://github.com/larose/cargo"
license = "MIT"
readme = "README.md"
maintainers = ["Mathieu Larose <mathieu@mathieularose.com>"]
name = "cargo"
version = "0" # Do not change

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
mypy = "^0.770"
isort = "^4.3.21"
flake8 = "^3.7.9"
requests = "^2.23.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
